--- a/app/styles/input.scss
+++ b/app/styles/input.scss
@@ -41,29 +41,46 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
 
-    .word-input {
-      width: 95%;
-      max-width: 300px;
-      height: 40px;
-      text-align: center;
-      outline: none;
-      padding: 20px 20px 10px;
-      font-size: 42px;
-      line-height: 1;
-      border: none;
-      border-bottom: 2px solid $blue;
-      font-family: "Lobster", sans-serif;
+    .row {
+      display: inline-block;
 
-      &:focus {
-        transform: scale(1.03);
-        transition: transform 0.2s ease;
+      .word-input {
+        width: 95%;
+        max-width: 255px;
+        display: inline-block;
+        height: 40px;
+        text-align: center;
+        outline: none;
+        padding: 20px 55px 10px 20px;
+        font-size: 42px;
+        line-height: 1;
+        border: none;
+        border-bottom: 2px solid $blue;
+        font-family: "Lobster", sans-serif;
+
+        &:focus {
+          transform: scale(1.03);
+          transition: transform 0.2s ease;
+        }
+
+        &::placeholder {
+          color: #00517733;
+        }
       }
 
-      &::placeholder {
-        color: #00517733;
+      .button-container {
+        display: inline-block;
+        margin-left: -45px;
       }
+    }
+  }
+
+  .buttons {
+    margin-top: 40px;
+
+    button {
+      margin-inline: 5px;
     }
   }
 
@@ -74,13 +91,12 @@
     color: #e6f7ff;
     border: none;
     border-radius: 10px;
-    // margin-left: 10px;
     height: 40px;
     cursor: pointer;
     transition: background-color 0.2s ease;
 
     &.submit-btn {
-      margin-top: 20px;
+      // margin-top: 20px;
 
       &:hover {
         transform: scale(1.03);
@@ -108,5 +124,12 @@
 
   .loader {
     margin-top: 40px;
+  }
+
+  // mobile
+  @media screen and (max-width: 650px) {
+    .word-input {
+      // width: 70%;
+    }
   }
 }
