--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,35 +1,36 @@
-@import "variables";
+@use "variables";
 
 // normalize.css
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 
+// Merriweather font
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather:wght@400;700&display=swap");
+
 // Lobster font
 @font-face {
   font-family: Lobster;
-  src: url("public/fonts/Lobster-Regular.ttf") format("truetype");
+  src: url("/fonts/Lobster-Regular.ttf") format("truetype");
   font-weight: 600;
 }
 
-// Montserrat regular font
+// PTSerif regular font
 @font-face {
-  font-family: Montserrat;
-  src: url("public/fonts/Montserrat-Regular.ttf") format("truetype");
+  font-family: PTSerif;
+  src: url("/fonts/PTSerif-Regular.ttf") format("truetype");
   font-weight: 400;
 }
-
-// Montserrat bold font
 @font-face {
-  font-family: Montserrat;
-  src: url("public/fonts/Montserrat-SemiBold.ttf") format("truetype");
+  font-family: PTSerif;
+  src: url("/fonts/PTSerif-Bold.ttf") format("truetype");
   font-weight: 600;
 }
 
 * {
-  color: $blue;
+  color: variables.$dark-blue;
 }
 
 .app {
-  font-family: "Montserrat", sans-serif;
+  font-family: "PTSerif", serif;
   font-size: 1.5em;
   margin: 50px 50px 100px;
 
@@ -49,7 +50,6 @@
 
   .main {
     line-height: 2em;
-    color: #353740;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,6 +57,7 @@
 
     h2 {
       font-size: 24px;
+      line-height: 2rem;
     }
 
     .response {
